# sistema-gestion-producos

./: .gitignore  README.md  package.json  tailwind.config.ts  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: layout.tsx  page.tsx
src/app/categorias/: page.tsx
src/components/: icons.tsx  index.ts  page-layout.tsx  sidebar.tsx  theme-button.tsx  with-tooltip.tsx
src/components/categories/: index.ts
src/components/categories/actions/: index.tsx
src/components/categories/actions/creation-dialog/: creation-form.tsx  index.tsx
src/components/categories/actions/filters-dialog/: filters-form.tsx  index.tsx
src/components/categories/categories-list/: delete-dialog.tsx  index.tsx  information-hover-card.tsx
src/components/categories/categories-list/actions/: delete-dialog.tsx  index.tsx
src/components/categories/categories-list/actions/update-dialog/: index.tsx  update-form.tsx
src/components/categories/categories-list/update-dialog/: index.tsx  update-form.tsx
src/components/header/: index.tsx  window-controls.tsx
src/components/providers/: index.tsx  theme-provider.tsx
src/components/ui/: alert-dialog.tsx  button.tsx  calendar.tsx  dialog.tsx  hover-card.tsx  resizable.tsx  toast.tsx  use-toast.ts
src/hooks/: index.ts  use-categories-filter.ts  use-mounded.ts  use-window-controls.ts
src/lib/: diacritic-chars.ts  schemas.ts  utils.ts
src/stores/: categories.ts  index.ts
src/styles/: globals.css
