[package]
name = "sistema-gestion-productos"
version = "0.0.0"
description = "Sistema de Gestión de Productos"
authors = ["Agustín Arnoldi"]
license = "MIT"
repository = "https://github.com/AgusjkDev/sistema-gestion-productos"
default-run = "sistema-gestion-productos"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "window-minimize", "window-close"] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
